fixed label visibility in ingredient selects

--- a/src/components/AddRecipeForm/IngredientItem/IngredientItem.module.scss
+++ b/src/components/AddRecipeForm/IngredientItem/IngredientItem.module.scss
@@ -38,9 +38,6 @@
   background-color: transparent;
   border: none;
   color: $accent;
-  // height: 100%;
-  // width: 100%;
-  background-color: blueviolet;
 
   &:disabled {
     color: rgba($accent, 0.3);
