--- a/src/components/AddRecipeForm/SearchDropdown/SearchDropdown.module.scss
+++ b/src/components/AddRecipeForm/SearchDropdown/SearchDropdown.module.scss
@@ -4,7 +4,6 @@
   font-size: $input-placeholder;
   font-weight: $regular;
   letter-spacing: -0.32px;
-  background-color: green;
 }
 
 .label {
